--- a/css/style.css
+++ b/css/style.css
@@ -1863,6 +1863,10 @@ footer {
   -o-transform: rotateZ(360deg);
   -ms-transform: rotateZ(360deg);
   transform: rotateZ(360deg);
+  width: 6.875em;
+  height: 6.875em;
+  margin: 0 auto;
+  background: no-repeat url("/img/author_move.jpg")left top;
 }
 @media only screen and (min-width: 768px) {
   .author {
