--- a/test/huhu_anime.css
+++ b/test/huhu_anime.css
@@ -205,79 +205,79 @@
 
 
 @keyframes wave1amime {
-     0% {-webkit-transform:translate(-50px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    50% {-webkit-transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-     100% {-webkit-transform:translate(50px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+     0% {transform:translate(-50px, 0px) }
+    50% {transform:translate(0px, 0px) }
+     100% {transform:translate(50px, 0px) }
 }
 @keyframes wave2amime {
-    0% {-webkit-transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    50% {-webkit-transform:translate(-50px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    100% {-webkit-transform:translate(-100px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+    0% {transform:translate(0px, 0px) }
+    50% {transform:translate(-50px, 0px) }
+    100% {transform:translate(-100px, 0px) }
 }
 
 @keyframes hoopanime {
-    0% {-webkit-transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    25% {-webkit-transform:translate(30px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(30deg) translate(0%, 0%);}
-    50% {-webkit-transform:translate(30px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(200deg) translate(0%, 0%);}
-    /*70% {transform:translate(5px, 15px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(270deg) translate(0%, 0%);}*/
-    100% {-webkit-transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(15deg) translate(0%, 0%);}
+    0% {transform:translate(0px, 0px) }
+    25% {transform:translate(30px, -10px) rotateZ(30deg) }
+    50% {transform:translate(30px, 10px)  rotateZ(200deg) }
+    /*70% {transform:translate(5px, 15px)  rotateZ(270deg) }*/
+    100% {transform:translate(0px, 0px)  rotateZ(15deg) }
 }
 @keyframes boatanime {
-    0% {-webkit-transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    33% {-webkit-transform:translate(15px, -15px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-30deg) translate(0%, 0%);}
-    66% {-webkit-transform:translate(30px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    /*75% {transform:translate(5px, -5px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(15deg) translate(0%, 0%);}*/
-    100% {-webkit-transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+    0% {transform:translate(0px, 0px) }
+    33% {transform:translate(15px, -15px)  rotateZ(-30deg) }
+    66% {transform:translate(30px, -10px) }
+    /*75% {transform:translate(5px, -5px)  rotateZ(15deg) }*/
+    100% {transform:translate(0px, 0px) }
 }
 @keyframes fishanime {
-    0% {transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    25% {transform:translate(15px, -50px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(50deg) translate(0%, 0%);}
-    50% {transform:translate(50px, -30px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(20deg) translate(0%, 0%);}
-    75% {transform:translate(20px, 5px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(15deg) translate(0%, 0%);}
-    100% {transform:translate(0px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+    0% {transform:translate(0px, 0px) }
+    25% {transform:translate(15px, -50px)  rotateZ(50deg) }
+    50% {transform:translate(50px, -30px)  rotateZ(20deg) }
+    75% {transform:translate(20px, 5px)  rotateZ(15deg) }
+    100% {transform:translate(0px, 0px) }
 }
 @keyframes islandanime {
-    0% {-webkit-transform:translate(0px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    15% {-webkit-transform:translate(-10px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(2deg) translate(0%, 0%);}
-    30% {-webkit-transform:translate(-20px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(5deg) translate(0%, 0%);}
-    40% {-webkit-transform:translate(-15px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(10deg) translate(0%, 0%);}
-    65% {-webkit-transform:translate(10px, -5px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-5deg) translate(0%, 0%);}
-    75% {-webkit-transform:translate(20px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-5deg) translate(0%, 0%);}
-    85% {-webkit-transform:translate(10px, -3px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-2deg) translate(0%, 0%);}
-    100% {-webkit-transform:translate(0px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+    0% {transform:translate(0px, 10px) }
+    15% {transform:translate(-10px, 0px)  rotateZ(2deg) }
+    30% {transform:translate(-20px, -10px)  rotateZ(5deg) }
+    40% {transform:translate(-15px, 0px)  rotateZ(10deg) }
+    65% {transform:translate(10px, -5px)  rotateZ(-5deg) }
+    75% {transform:translate(20px, -10px)  rotateZ(-5deg) }
+    85% {transform:translate(10px, -3px)  rotateZ(-2deg) }
+    100% {transform:translate(0px, 10px) }
 }
 @keyframes balloonanime {
-    0% {-webkit-transform:translate(0px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    15% {-webkit-transform:translate(10px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(2deg) translate(0%, 0%);}
-    30% {-webkit-transform:translate(20px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(15deg) translate(0%, 0%);}
-    50% {-webkit-transform:translate(15px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(10deg) translate(0%, 0%);}
-    65% {-webkit-transform:translate(5px, -5px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-5deg) translate(0%, 0%);}
-    75% {-webkit-transform:translate(-10px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-2deg) translate(0%, 0%);}
-    85% {-webkit-transform:translate(-15px, -3px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-2deg) translate(0%, 0%);}
-    100% {-webkit-transform:translate(0px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+    0% {transform:translate(0px, 10px) }
+    15% {transform:translate(10px, 0px)  rotateZ(2deg) }
+    30% {transform:translate(20px, -10px)  rotateZ(15deg) }
+    50% {transform:translate(15px, 0px)  rotateZ(10deg) }
+    65% {transform:translate(5px, -5px)  rotateZ(-5deg) }
+    75% {transform:translate(-10px, -10px)  rotateZ(-2deg) }
+    85% {transform:translate(-15px, -3px)  rotateZ(-2deg) }
+    100% {transform:translate(0px, 10px) }
 }
 
 @keyframes cloud1anime {
-     0% {-webkit-transform:translate(0px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-     15% {-webkit-transform:translate(20px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(2deg) translate(0%, 0%);}
-     30% {-webkit-transform:translate(40px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(15deg) translate(0%, 0%);}
-     50% {-webkit-transform:translate(60px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(10deg) translate(0%, 0%);}
-     65% {-webkit-transform:translate(80px, -5px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-5deg) translate(0%, 0%);}
-     75% {-webkit-transform:translate(100px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-2deg) translate(0%, 0%);}
-     85% {-webkit-transform:translate(120px, -3px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-2deg) translate(0%, 0%);}
-     100% {-webkit-transform:translate(140px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+     0% {transform:translate(0px, 10px) }
+     15% {transform:translate(20px, 0px)  rotateZ(2deg) }
+     30% {transform:translate(40px, -10px)  rotateZ(15deg) }
+     50% {transform:translate(60px, 0px)  rotateZ(10deg) }
+     65% {transform:translate(80px, -5px)  rotateZ(-5deg) }
+     75% {transform:translate(100px, -10px)  rotateZ(-2deg) }
+     85% {transform:translate(120px, -3px)  rotateZ(-2deg) }
+     100% {transform:translate(140px, 10px) }
  }
 @keyframes cloud2anime {
-    0% {-webkit-transform:translate(0px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    15% {-webkit-transform:translate(20px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(2deg) translate(0%, 0%);}
-    30% {-webkit-transform:translate(40px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(15deg) translate(0%, 0%);}
-    50% {-webkit-transform:translate(60px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(10deg) translate(0%, 0%);}
-    65% {-webkit-transform:translate(80px, -5px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-5deg) translate(0%, 0%);}
-    75% {-webkit-transform:translate(100px, -10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-2deg) translate(0%, 0%);}
-    85% {-webkit-transform:translate(120px, -3px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(-2deg) translate(0%, 0%);}
-    100% {-webkit-transform:translate(140px, 10px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+    0% {transform:translate(0px, 10px) }
+    15% {transform:translate(20px, 0px)  rotateZ(2deg) }
+    30% {transform:translate(40px, -10px)  rotateZ(15deg) }
+    50% {transform:translate(60px, 0px)  rotateZ(10deg) }
+    65% {transform:translate(80px, -5px)  rotateZ(-5deg) }
+    75% {transform:translate(100px, -10px)  rotateZ(-2deg) }
+    85% {transform:translate(120px, -3px)  rotateZ(-2deg) }
+    100% {transform:translate(140px, 10px) }
 }
 @keyframes titleanime {
-    0% {-webkit-transform:translate(300px, 0px) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
-    100% {-webkit-transform:translate(-300px, 0) scale(1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) translate(0%, 0%);}
+    0% {transform:translate(300px, 0px) }
+    100% {transform:translate(-300px, 0) }
 }
