--- a/resume/Resume_files/style.css
+++ b/resume/Resume_files/style.css
@@ -1,3 +1,27 @@
+/*通用样式*/
+*{ font-family:"微软雅黑"}
+body{ background-color:#fff; width:100%;}
+body, input, button, select, textarea { font-size:12px; color:#333;}
+textarea { resize: none; }
+/*body, ul, ol, li, dl, dd, p, h1, h2, h3, h4, h5, h6, form,img, fieldset, .pr, .pc { margin:0; padding:0;}*/
+/*table { empty-cells: show; border-collapse: collapse;*/
+/*}*/
+/*caption, th { text-align: left; font-weight: 400; }*/
+ul li, .xl li { list-style: none; }
+/*h1, h2, h3, h4, h5, h6 { font-size: 1em; font-weight:normal;}*/
+/*em, cite, i { font-style: normal; display: block;}*/
+a { color:#666; text-decoration: none; transition: 0.5s all; -webkit-transition: 0.5s all; -moz-transition: 0.5s all; -o-transition: 0.5s all;}
+a:hover{ color:#cda484}
+
+/*img{ border:0;}*/
+label { cursor: pointer; }
+/*input:disabled{background-color:#fff;color:#666;}*/
+/*textarea:disabled{background-color:#fff;color:#666;}*/
+/*.cl:after { content: "."; display: block; height: 0; clear: both; visibility: hidden ; ! }*/
+/*.cl { zoom: 1; }*/
+
+
+
 #superContainer {
   height: 100%;
   position: relative;
@@ -367,3 +391,27 @@ border:1px dashed #999;
   padding:7px 10px;
 }
 #logo{display: inline-block;}
+
+
+/*时间轴*/
+#timeline{width:1120px;height:400px;overflow:hidden;
+  margin:0 auto;
+  position:relative;background:url('../images/licbg.png') left 250px repeat-x;}
+#dates{width:1120px;overflow:hidden;margin-top:-8px;}
+#dates li{float:left;width:94px;height:90px;font-size:16px;text-align:center;}
+#dates a{
+  color:rgba(255,255,255,0.7);
+  width:94px;height:90px;line-height:130px;display:block;}
+
+#dates .selected{font-size:18px;font-weight:bold;
+  color:rgba(255,255,255,1);
+  background:url(../images/licbgt.png) no-repeat center top;}
+#issues{width:1120px;height:250px;overflow:hidden;}
+#issues li{width:1120px;height:250px;list-style:none;float:left;text-align: left;
+  font-size: 1rem;
+
+}
+#issues .inner{
+  margin:0 auto;
+  padding-left: 400px;
+}
