--- a/resume/Resume_files/style.css
+++ b/resume/Resume_files/style.css
@@ -348,6 +348,29 @@ a:active {
 
 
 /* nav */
+#nav {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  width: 100%;
+  height: 52px;
+  z-index: 999;
+  background-color: transparent;
+  color:#ddd;;
+}
+#nav a {
+  padding: 0 25px;
+  font-size: 14px;
+  line-height: 40px;
+  cursor: pointer;
+  z-index: 1;
+  color:#ddd;
+}
+#nav a:hover{color:#fff;
+  border:1px dashed #999;
+  padding:7px 10px;
+}
 .headcontainer{
   margin:0 auto;
   width:100%;z-index:9999;
